k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greenstay
  labels:
    app.kubernetes.io/part-of: greenstay
